# MuddSub

./: .gitignore  .gitmodules  Doxyfile  README.md  deps.txt  doxyfile  frames.gv
builds/muddsub_primary/: CMakeLists.txt  package.xml
builds/muddsub_raspi/: CMakeLists.txt  package.xml
builds/muddsub_sim/: CMakeLists.txt  package.xml
common_msgs/: CMakeLists.txt  package.xml  setup.py
common_msgs/msg/: Map.msg
common_msgs/src/common_msgs/: map_publisher.py  questions  util.py
controls/: CMakeLists.txt  README.md  controls_cfg.launch  package.xml  setup.py  todo.txt
controls/cfg/: Controls.cfg  controls_params.yaml  dynamics.yaml  pid_tuning.yaml
controls/include/controls/: ControlDispatch.hh  Controller.hh  ControlsPublisher.hh  DecoupledLQR.hh  LQRController.hh  LQRController.inl  PID.h  PID.hh  PidController.hh  (+12 more)
controls/launch/: ControlDispatch.launch  DynamicSimulation.launch  DynamicSimulationPID.launch  Dynamics.launch  TestDynamics.launch  control_dispatch.launch
controls/msg/: State.msg  ThrusterForceArray.msg  ThrusterPWMArray.msg
controls/scripts/: AutotunePID.py  ControlsExampleNode.py  ControlsPub.py  ControlsPubNode.py  ControlsPublisher.py  ControlsServer.py  SampleErrorPublisher.py  SixDegreePIDTune.py  VehicleDynamics.py  logging_mse.py
controls/src/: ControlDispatch.cc  Controller.cc  ControlsExampleNode.cc  ControlsPubNode.cc  ControlsPublisher.cc  DecoupledLQR.cc  DynamicsTesting.cc  MPC.py  PID.cc  SimulationDynamics.cc  SimulationDynamicsPID.cc  SixDegreePID.cc  StatePublisher.cc  ThrusterManager.cc  VehicleDynamics.cc  six_deg_PID.cc
controls/tune_logs/: logs.json
core/: CMakeLists.txt  mainpage.cc  package.xml
core/descriptions/: alfie-light.urdf.xacro  alfie.urdf  alfie.urdf.xacro  sensors.xacro  thruster.xacro
core/launch/: alfie_config.launch
core/scripts/: ParseDynamicsToParams.py  kgf-to-pulse.py  kgf_to_pulse.py  pulse-to-teensy.py  pulse_to_teensy.py  state_manager.py
core/src/: OdomTfBroadcaster.cc  StatePublisher.cc
drivers/: CMakeLists.txt  drivers_cfg.launch  package.xml  setup.py
drivers/cfg/: Drivers.cfg  Thrusters.cfg  drivers_params.yaml
drivers/launch/: drive_motors.launch  imu_test.launch  joystick.launch  mission.launch  mission_no_vision.launch  mission_record_everything.launch  mission_sm.launch  run_robot.launch  teleop.launch  thrusters_gui.launch
drivers/msg/: DVL.msg  EulerOrientation.msg  ImuAcceleration.msg  ImuLinAccel.msg
drivers/scripts/: DepthSensorExampleNode.py  DepthSensorPubNode.py  DepthSensorPublisher.py  DriversServer.py  JoystickTeleop.py  PWMPublisher.py  ThrustersTeleop.py  depth_sensor_jetson.py  depth_to_jetson.py  dvl_jetson.py  imu_wrapper.py  jetson_thruster_control.py  joystickServer.py  kgf_to_pulse.py  publish_ned_transform.py  pulse_to_teensy.py  republish_thruster_forces.py  republish_wrench.py  teensy_interface.py  teensy_test.py  windowsJoystick.py
drivers/src/: DepthSensorExampleNode.cc  DepthSensorPubNode.cc  DepthSensorPublisher.cc  pulse_to_serial.cc
mission/: CMakeLists.txt  ExecuteStateMachine.py  GoToTargetTemplate.py  Navigation.action  Navigator.py  NavigatorV1.py  configure_mission.py  depth_controller.launch  mission.launch  mission_cfg.launch  mission_generator.py  package.xml  run_state_machine.py  setup.py  straight_forward.launch  template_task_generator.py
mission/State Machine/: do_task.py  do_task_torpedo.py  go_to_target.py  locate_target.py  mission_runner.py
mission/cfg/: Mission.cfg  mission_params.yaml
mission/msg/: RotationalMovement.msg  SinTraversalPath.msg
mission/scripts/: DepthController.py  GoToTarget.py  Mission.py  MissionServer.py  SetpointPublisher.py  StateMachine.py  StatePublisher.py  StraightForward.py  do_task_torpedo.py  locate_target.py  mission_configurator.py  mission_generator.py  mission_runner.py  state_publisher.py
motion_planning/: CMakeLists.txt  motion_planning_cfg.launch  package.xml
motion_planning/action/: CreatePath.action  CreateTrajectory.action
motion_planning/cfg/: MotionPlanning.cfg  motion_planning_params.yaml
motion_planning/msg/: Trajectory.msg
motion_planning/scripts/: 3D_Astar.py  MotionPlanningExampleNode.py  MotionPlanningPublisher.py  MotionPlanningServer.py  RRT.m  RRT.py  Sine.py  Sine_Visualization.py  TrajectoryPubNode.py  TrajectoryPublisher.py  a_star.py
motion_planning/src/: AStar.cc  AStarMission.cc  MotionPlanningExampleNode.cc  MotionPlanningPubNode.cc  MotionPlanningPublisher.cc  PathServer.cc  PathServerNode.cc  TrajectoryPubNode.cc  TrajectoryPublisher.cc  TrajectoryServer.cpp  main.cpp
navigation/: CMakeLists.txt  a_star.py
navigation/src/: AStar.cc
sim/: CMakeLists.txt  package.xml
sim/launch/: AutotunePid.launch  DynamicSimulation.launch  DynamicSimulationPID.launch  Robot.launch  Sim.launch  dynamic_simulation.launch  sim.launch  transdec.launch
sim/meshes/: gate.wrl
sim/scenes/: .GateScene.xml.swp  GateScene.xml  GateScene.xml.xacro  GateScenes.xml  bannerbuoy.urdf  bannerbuoy.urdf.xacro  buoy.urdf  buoy.urdf.xacro  gate.urdf  gate.urdf.xacro  sensors.xacro
sim/scripts/: GazeboInterface.py  gazebo_interface.py  republish_wrench.py  slam.py  vision.py  vision_perfect.py
slam/: CMakeLists.txt  Measurements.txt  Merged.txt  Odometry.txt  README.md  package.xml  setup.py  slam_cfg.launch
slam/cfg/: Slam.cfg  slam_params.yaml
slam/msg/: Map.msg  Obstacle.msg
slam/scripts/: DataLoader.py  Dataloader.py  Ellipse.py  FastSLAM2.py  Landmark.py  Particle.py  Run.py  RunFastSlam2.py  SAPlots.py  SLAMEvalClient.py  SLAMExampleNode.py  SLAMPubNode.py  SLAMPublisher.py  SLAMServer.py  SLAMTuningClient.py  SimulatedAnnealing.py  Simulator.py  plotter.py  runParamsTuning.py  silly_slam.py
slam/src/: DataLoader.cc  EKF.cc  FastSLAM.cc  Particle.cc  RunFastSLAM.cc  SLAMEvalServer.cc  SLAMExampleNode.cc  SLAMPubNode.cc  SLAMPublisher.cc
slam/srv/: EvalFastSLAM.srv
tutorials/: CMakeLists.txt  package.xml
tutorials/dynamics/: Controller.py  ControllerSolution.py  ControllerTemplate.py  README.md  VehicleModel.py
tutorials/launch/: DynamicsSim.launch
(+527 files in other folders)
