<package>
  <name>muddsub_sim</name>
  <version>3.0.2</version>
  <description>
    Main autonomy stack for MuddSub, with simulation
  </description>
  <maintainer email="sisaacson@hmc.edu">Seth Isaacson</maintainer>
  <license>BSD-2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>sim</run_depend>
  <run_depend>muddsub_primary</run_depend>

  <export>
   	  <metapackage />
   </export>
</package>
